--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "github": "https://github.com/marionettejs/backbone.marionette",
   "dependencies": {
+  },
+  "peerDependencies": {
     "backbone.babysitter": "^0.1.0",
     "backbone.wreqr": "^1.0.0",
     "backbone": "1.0.0 - 1.1.2",
